--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -6,166 +6,69 @@
     <li><a href="{{ root }}photogallery.html">Photo Gallery</a></li>
 {% endblock %}
 
+{% block extra_styles %}
+<link href="css/thumbnail-gallery.css" rel="stylesheet">
+{% endblock %}
 
 {% block content %}
 
-<!-- I don't know if this header is needed -->
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Photogallery</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/thumbnail-gallery.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
 
 
+<div class="container photo-gallery">
 
- <!-- Page Content -->
-    <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <ul id="portfolio-filter">
+        <li class="act"><a href="#" class="filter" data-filter="*">All</a></li>
+        <li><a href="#" class="filter" data-filter=".photography">Photography</a></li>
+        <li><a href="#" class="filter" data-filter=".architecture">Architecture</a></li>
+        <li><a href="#" class="filter" data-filter=".webdesign">Webdesign</a></li>
+        <li><a href="#" class="filter" data-filter=".technology">Technology</a></li>
+        <li><a href="#" class="filter" data-filter=".identity">Identity</a></li>
+      </ul>
 
-        <div class="row">
+      <section id="portfolio-items">
+        <ul class="portfolio">
 
-            <div class="col-lg-12">
-                <h4 class="page-header">Thumbnail Gallery</h4>
-            </div>
+          <li>
+            <!-- Portfolio Item -->
+            <article class="col-md-3 project" data-tags="photography,technology">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/balconymorning.jpg" class="popup-link" title="Morning sunrise off of our balcony">
+                    <img src="{{ media }}img/gallery/balconymorning.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Morning sunrise off of our balcony
+                </div>
+              </div>
+            </article>
+            <!-- Portfolio Item End -->
+          </li>
 
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/balconymorning.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/balconymorning.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Morning sunriste off of our balcony</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/outdoorpoolsm.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/outdoorpoolsm.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Outdoor seasonal pool</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/boathouse.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/boathouse.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Boathouse where our slip is</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/treehouseentrance.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/treehouseentrance.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Look for this sign on your left</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/treehousefromlake.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/treehousefromlake.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>View from Table Rock Lake</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/fitnessroom.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/fitnessroom.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Fitness room</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/balconynear.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/balconynear.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Looking off the balcony</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/treeofheaven.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/treeofheaven.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>The name of our particular building</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/indoorhottubs.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/indoorhottubs.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Indoor hot tubs</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/indoorexercisetub.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/indoorexercisetub.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>This is an exercise pool</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <a href="{{ media }}img/gallery/boatslip.jpg" class="zoom popup-link">
-                    <img class="img-responsive" src="{{ media }}img/gallery/boatslip.jpg" alt="">
-                        <div class="our-team-text">
-                            <p>Our boat slip in the boat house</p>
-                        </div> 
-                </a>
-            </div>
-            
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-                </a>
-            </div>
-        </div>
+          <li>
+            <!-- Portfolio Item -->
+            <article class="col-md-3 project" data-tags="technology">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/outdoorpoolsm.jpg" class="popup-link" title="Outdoor seasonal pool">
+                    <img src="{{ media }}img/gallery/outdoorpoolsm.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Outdoor seasonal pool
+                </div>
+              </div>
+            </article>
+            <!-- Portfolio Item End -->
+          </li>
 
+        </ul>
+      </section>
     </div>
+  </div>
+</div>
 
 
 
