--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -20,19 +20,19 @@
     <div class="col-md-12">
       <ul id="portfolio-filter">
         <li class="act"><a href="#" class="filter" data-filter="*">All</a></li>
-        <li><a href="#" class="filter" data-filter=".photography">Photography</a></li>
-        <li><a href="#" class="filter" data-filter=".architecture">Architecture</a></li>
-        <li><a href="#" class="filter" data-filter=".webdesign">Webdesign</a></li>
-        <li><a href="#" class="filter" data-filter=".technology">Technology</a></li>
-        <li><a href="#" class="filter" data-filter=".identity">Identity</a></li>
+        <li><a href="#" class="filter" data-filter=".interior">Interior</a></li>
+        <li><a href="#" class="filter" data-filter=".mainlevel">Main Level</a></li>
+        <li><a href="#" class="filter" data-filter=".secondlevel">Second Level</a></li>
+        <li><a href="#" class="filter" data-filter=".exterior">Exterior</a></li>
+        <li><a href="#" class="filter" data-filter=".balconyview">Balcony View</a></li>
       </ul>
 
       <section id="portfolio-items">
         <ul class="portfolio">
-
+            
+        <!-- Portfolio Item -->
           <li>
-            <!-- Portfolio Item -->
-            <article class="col-md-3 project" data-tags="photography,technology">
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
               <div class="project-item-isotope">
                 <div class="project-image">
                   <a href="{{ media }}img/gallery/balconymorning.jpg" class="popup-link" title="Morning sunrise off of our balcony">
@@ -44,12 +44,12 @@
                 </div>
               </div>
             </article>
-            <!-- Portfolio Item End -->
           </li>
-
+        <!-- Portfolio Item End -->
+        
+        <!-- Portfolio Item -->        
           <li>
-            <!-- Portfolio Item -->
-            <article class="col-md-3 project" data-tags="technology">
+            <article class="col-md-3 project" data-tags="exterior">
               <div class="project-item-isotope">
                 <div class="project-image">
                   <a href="{{ media }}img/gallery/outdoorpoolsm.jpg" class="popup-link" title="Outdoor seasonal pool">
@@ -61,9 +61,251 @@
                 </div>
               </div>
             </article>
-            <!-- Portfolio Item End -->
           </li>
-
+        <!-- Portfolio Item End -->
+        
+        
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/balconynear.jpg" class="popup-link" title="View over the balcony">
+                    <img src="{{ media }}img/gallery/balconynearsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  View over the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/boathouse.jpg" class="popup-link" title="Covered boathouse on the property">
+                    <img src="{{ media }}img/gallery/boathousesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Covered boathouse on the property
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/boatslip.jpg" class="popup-link" title="Our boat slip in the boathouse">
+                    <img src="{{ media }}img/gallery/boatslipsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Our boat slip in the boathouse
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+        
+                
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/fitnessroom.jpg" class="popup-link" title="Fitness room">
+                    <img src="{{ media }}img/gallery/fitnessroomsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Fitness room
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                   
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/indoorexercisetub.jpg" class="popup-link" title="Indoor exercise pool">
+                    <img src="{{ media }}img/gallery/indoorexercisetubsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Indoor exercise pool
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                   
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/indoorhottubs.jpg" class="popup-link" title="Indoor hot tubs">
+                    <img src="{{ media }}img/gallery/indoorhottubssmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Indoor hot tubs
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                   
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/treehouseentrance.jpg" class="popup-link" title="Entrance to Treehouse Condos">
+                    <img src="{{ media }}img/gallery/treehouseentrancesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Entrance to Treehouse Condos
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+          
+                   
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/treehousefromlake.jpg" class="popup-link" title="View of Treehouse Condos from Table Rock Lake">
+                    <img src="{{ media }}img/gallery/treehousefromlakesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  View of Treehouse Condos from Table Rock Lake
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                             
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/treeofheaven.jpg" class="popup-link" title="The name of our building">
+                    <img src="{{ media }}img/gallery/treeofheavensmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  The name of our building
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                            
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/balconysnowscape.jpg" class="popup-link" title="Snowy view from the balcony">
+                    <img src="{{ media }}img/gallery/balconysnowscapesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Snowy view from the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+ 
+                             
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/beautifulbalconyview.jpg" class="popup-link" title="Another beautiful day">
+                    <img src="{{ media }}img/gallery/beautifulbalconyviewsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Another beautiful day
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                                   
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/buildingentrance.jpg" class="popup-link" title="Our building from the rear">
+                    <img src="{{ media }}img/gallery/buildingentrancesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Our building from the rear
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                                   
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/indianpointmarina.jpg" class="popup-link" title="Indian Point Marina">
+                    <img src="{{ media }}img/gallery/indianpointmarinasmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Indian Point Marina
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                                              
+        <!-- Portfolio Item -->        
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/indianpointboatrental.jpg" class="popup-link" title="Indian Point Marina boat rental">
+                    <img src="{{ media }}img/gallery/indianpointboatrentalsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Indian Point Marina boat rental
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+                         
         </ul>
       </section>
     </div>
