--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -4,16 +4,17 @@
             <div class="container">
                 <!-- logo with back to top -->
 
-                
+
                 <a href="index.html" title="Home" class="back-to-top">
                     <img src="{{media}}img/logo-small-header.png " alt="logo" class="logo">
                 </a>
 
                 <!-- Menu -->
                 <ul class="nav navbar-nav">
-                    
+
                     <li><a href="{{ root }}index.html">Home</a></li>
                     <li><a href="{{ root }}photogallery.html">Photo Gallery</a></li>
+                    <li><a href="{{ root }}videotour.html">Video Tour</a></li>
                     <li><a href="{{ root }}rentalrates.html">Rental Rates</a></li>
                     <li><a href="{{ root }}availability.html">Availability</a></li>
                     <li><a href="{{ root }}rentalagreement.html">Rental Agreement</a></li>
@@ -21,7 +22,7 @@
                     <li><a href="{{ root }}thingstodo.html">Things to Do</a></li>
                     <li><a href="{{ root }}aboutus.html">About Us</a></li>
                     <li><a href="{{ root }}contactus.html">Contact Us</a></li>
-                    
+
                 </ul>
                 <!-- Menu End -->
             </div>
