--- a/templates/pages/videotour.html
+++ b/templates/pages/videotour.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="our-team-image">
-                <iframe width="560" height="315" src="https://youtu.be/gGJbP7DkuhU" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gGJbP7DkuhU" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
