added photos to gallery

--- a/templates/pages/photogallery.html
+++ b/templates/pages/photogallery.html
@@ -900,6 +900,160 @@
           </li>
         <!-- Portfolio Item End -->
 
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/hazyday.jpg" class="popup-link" title="A hazy day">
+                    <img src="{{ media }}img/gallery/hazydaysmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  A hazy day
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="interior,mainlevel">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/lifeisgood.jpg" class="popup-link" title="Tin artwork created for master bathroom">
+                    <img src="{{ media }}img/gallery/lifeisgoodsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Tin artwork created for master bathroom
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/morningafterrains.jpg" class="popup-link" title="Morning after rains">
+                    <img src="{{ media }}img/gallery/morningafterrainssmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Morning after rains
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/nightbalconyview.jpg" class="popup-link" title="Nightime view from the balcony">
+                    <img src="{{ media }}img/gallery/nightbalconyviewssmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Nightime view from the balcony
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/parkinglottoonestairflight.jpg" class="popup-link" title="Cross over from the parking lot to one flight of stairs">
+                    <img src="{{ media }}img/gallery/parkinglottoonestairflightsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Cross over from the parking lot to one flight of stairs
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/stairsoneflightfromparking.jpg" class="popup-link" title="One flight of stairs up from the parking lot">
+                    <img src="{{ media }}img/gallery/stairsoneflightfromparkingsmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  One flight of stairs up from the parking lot
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/poolside.jpg" class="popup-link" title="Hang out by the outdoor pool">
+                    <img src="{{ media }}img/gallery/poolsidesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Hang out by the outdoor pool
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/swiminletboathouse.jpg" class="popup-link" title="Swim off the boathouse or your boat">
+                    <img src="{{ media }}img/gallery/swiminletboathousesmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Swim off the boathouse or your boat
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+        <!-- Portfolio Item -->
+          <li>
+            <article class="col-md-3 project" data-tags="exterior,balconyview">
+              <div class="project-item-isotope">
+                <div class="project-image">
+                  <a href="{{ media }}img/gallery/thuderstormbay.jpg" class="popup-link" title="Thunderstorm over Table Rock Lake">
+                    <img src="{{ media }}img/gallery/thuderstormbaysmall.jpg" alt="sdf">
+                  </a>
+                </div>
+                <div class="project-text">
+                  Thunderstorm over Table Rock Lake
+                </div>
+              </div>
+            </article>
+          </li>
+        <!-- Portfolio Item End -->
+
+
 
         </ul>
       </section>
