--- a/templates/pages/rentalrates.html
+++ b/templates/pages/rentalrates.html
@@ -10,31 +10,17 @@
      
 
 <div class="row">
-    <div class="col-md-8">
-        <div class="spacer20 visible-xs visible-sm"></div>
-        <h2>2015 Rental Rates</h2>
-        <h3>3 bedrooms, 3 baths, 2 living areas with sofa beds, huge TVs, sleeps 10</h3>
-        <h5>Jan 4th  - Feb 28th, 2 nights minimum stay, $100 per night</h5> 
-        <h5>Mar 1st  - May 21st, 2 nights minimum stay, $130 per night</h5> 
-        <h5>May 22nd - June 26th, 3 nights minimum stay, $210 per night</h5>
-        <h5>June 27th - July 31st, 3 nights minimum stay, $230 per night</h5>
-        <h5>August 1st - August 15th, 3 nights minimum stay, $215 per night</h5>
-        <h5>August 16th - Sept 6th, 2 nights minimum stay, $210 per night</h5>
-        <h5>Sept 7th - Jan 3rd, 2 nights minimum stay, $130 per night</h5> 
-        <p>Plus 11.6% Tax and $75 Cleaning Fee for the stay</p>
-        <p><em>Rates are based on 6 guests. Additional guests are $10 per person per night</em></p>
-        
-    </div>
-    
-    <div class="col-md-4 text-center">
-        <img src="{{ media }}img/rentalrates.jpg" alt="">
+    <div class="col-md-12">
+        <p>Our rates are very competitive and are seasonally-adjusted. For the rate in your desired date range please click on this link to our <strong>VRBO</strong> <em>Vacation Rental By Owner</em> website and go to the <strong>Rates</strong> tab. Those are the most current rates. There are also weekly reduced rates for stays that are 7 nights or longer.</p>
     </div>
 </div>
 
 <div class="text-center">
-    <a href="http://www.vrbo.com/686045/">
-        <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
-    </a>
+<a href="http://www.vrbo.com/686045/">
+    <img src="{{ media }}img/bookNowOnVRBO.jpg" alt="#">
+</a>
 </div>
+
+
 
 {% endblock %}
