--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -41,7 +41,7 @@
       Our condo is located about mid-point on a ridge in the Ozark Mountain range. If you walk down the slope you will arrive at Tablerock Lake’s water's edge by the boathouse where a slip awaits your boat, this is included with the rental. Have your own boat? There is a gravel parking lot where you can park your trailer after you launch - do this either next door or at Indian Point Marina.
     </p>
     <p>
-      If you walk up the slope from the condo, you can swim in the seasonal outdoor pool - Memorial Day weekend to Labor Day weekend. Or check out the year-round indoor hot tubs. There is also a fitness room for people age 18 and older. These are operated by Treehouse Condos and, at this point, are included at no additional cost with our condo rental.
+      If you walk up the slope from the condo, you can swim in the seasonal outdoor pool - Memorial Day weekend to Labor Day weekend (free to guests). Or check out the year-round indoor hot tubs. There is also a fitness room for people age 18 and older. The hot tubs and fitness room are operated by Treehouse Condos and are available for a nominal $20 extra fee paid to the Treehouse office good for the entire family for the entire stay.
     </p>
     <p>
       Sit out on our spacious balcony and enjoy the sunrise with a cup of coffee or gather the family for steaks on the electric grill. No matter the season, the views are always awesome and the wildlife active.
